# encointer-node

./: .gitignore  .taplo.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-node  README.md  cantillonV3Spec.json  cantillonV3SpecRaw.json  gesellv4Spec.json  gesellv4SpecRaw.json  gesellv5Spec.json  gesellv5SpecRaw.json  rust-toolchain.toml  rust-toolchain.toml.disable  typedefs.json  zepter.yaml
.github/workflows/: build-and-test.yml  build.yml  ci.yml  delete-release.yml  integration-tests.yml  ipfs-test.yml  publish-docker-release.yml  rust.yml
cli/: .gitignore  Cargo.toml  README.md  bootstrap_demo_community.py  bot-community.py  bot-stats-golden.csv  ceremony-phase-and-faucet-service.py  cli.py  dump-accounts.py  dump_account_balances.sh  dump_teleports.py  fetch-account-history.py  phase.py  polkadot-js-apps-types.json  voucher.py
cli/encointer-api-client-extension/: Cargo.toml
cli/py_client/: agent_pool.py  agents.py  balances_mixin.py  base.py  bazaar_mixin.py  client.py  communities_mixin.py  democracy_mixin.py  faucet_mixin.py  ipfs_mixin.py  metadata_mixin.py  pool.py  reputation_rings_mixin.py  treasury_mixin.py
cli/src/: community_spec.rs
cli/test-data/: aslah.json  leu.zuerich.V1.json  (+5 more)
client/: Cargo.toml  README.md  allocation.py  batch-transfer-calls.sh  batch.py  bazaar.py  bootstrap_demo_community.py  bootstrap_demo_community.sh  bootstrap_demo_currency.sh  bot-community.py  bot-stats-golden.csv  cli.py  dump.json  dump_account_balances.sh  dump_drips.py  e2e_tests.py  faucet.py  fetch-account-history.py  invoice.py  lib.py  phase.py  publish-assets.py  publish-icons.py  register-business-simple.py  register-business.py  register-businesses.py  register-offering.py  register-random-businesses-and-offerings.py  requirements.txt  test-locations-mediterranean.json  typedefs.json  upload-folder-to-ipfs-and-return-cid.py  upload-image-to-ipfs-and-return-cid.py  voucher.py
client/client/: client.py  ipfs.py
client/encointer-api-client-extension/: Cargo.toml
client/encointer-api-client-extension/src/: bazaar.rs  ceremonies.rs  communities.rs  democracy.rs  extrinsic_params.rs  lib.rs  reputation_commitments.rs  reputation_ring.rs  reputation_rings.rs  scheduler.rs  treasuries.rs
client/py_client/: agent_pool.py  agents.py  arg_parser.py  balances_mixin.py  base.py  bazaar_mixin.py  campaign.py  campaign_offline_payment.py  campaign_personhood.py  campaign_swap_option.py  ceremonies_mixin.py  client.py  communities.py  communities_mixin.py  democracy.py  democracy_mixin.py  faucet.py  faucet_mixin.py  helpers.py  ipfs.py  ipfs_mixin.py  offline_payment_mixin.py  reputation_commitments_mixin.py  reputation_rings_mixin.py  scheduler.py  simulation_log.py  treasury_mixin.py
client/src/: cli.rs  cli.yml  cli_args.rs  community_spec.rs  main.rs  types.rs  utils.rs
client/src/cli/: account.rs  chain.rs
client/src/commands/: encointer_bazaar.rs  encointer_ceremonies.rs  encointer_communities.rs  encointer_core.rs  encointer_democracy.rs  encointer_faucet.rs  encointer_ipfs.rs  encointer_offline_payment.rs  encointer_reputation_commitments.rs  encointer_reputation_ring.rs  encointer_reputation_rings.rs  encointer_scheduler.rs  encointer_treasuries.rs  frame.rs  keystore.rs  mod.rs
client/test-data/: README.md  aslah.json  corsica.locoflex.rococo.json  decoded.berlin.json  decoded.berlin.locations.json  decoded.buenosaires.json  greenbaydollar.json  latam.hackathon.json  leu.rococo.json  leu.zuerich.V1.json  leu.zuerich.V2.json  leu.zuerich.json  nyota.json  paynuq.json  polkadot.academy.json  test-locations-mediterranean.json  test-locations-scs.json  test.locations.corsica.locolight.json  test.locations.mediterranean.locolight.json
client/test-data/bazaar/: README.md
client/test-data/bazaar/EdisonPaula/businesses/kuecheedison/: KuecheEdison.json
client/test-data/bazaar/EdisonPaula/businesses/kuecheedison/products/: EdisonKaffee.json
client/test-data/bazaar/EdisonPaula/businesses/kuechepauli/: KuechePauli.json
client/test-data/bazaar/EdisonPaula/businesses/kücheedison/: KücheEdison.json
client/test-data/bazaar/EdisonPaula/businesses/kücheedison/offerings/: EdisonKaffee.json
client/test-data/bazaar/EdisonPaula/businesses/kücheedison/products/: EdisonKaffee.json
client/test-data/bazaar/EdisonPaula/businesses/küchepauli/: KüchePauli.json
client/test-data/bazaar/EdisonPaula/businesses/küchepauli/products/: PauliKaffee.json
client/test-data/bazaar/EdisonPaula/businesses/weidlibraeu/: Weidlibraeu.json
client/test-data/bazaar/EdisonPaula/businesses/weidlibräu/: Weidlibräu.json
client/test-data/bazaar/EdisonPaula/businesses/weidlibräu/offerings/: WeidlibräuBier.json
client/test-data/bazaar/EdisonPaula/businesses/weidlibräu/products/: WeidlibräuBier.json
client/test-data/bazaar/LeuZuerich/businesses/Revamp-IT/: revamp-it.json
client/test-data/bazaar/LeuZuerich/businesses/artrent/: artrent.json
client/test-data/bazaar/Nyota/businesses/RJmedia/: rj-media.json
client/test-data/bazaar/Paynuq/businesses/Zam/: zam.json
client/test-data/bazaar/Paynuq/businesses/misvtu/: misvtu.json
client/test-data/bazaar/technopark/businesses/: KücheEdison.json  KüchePauli.json  Weidlibräu.json
client/test-data/bazaar/technopark/offerings/: EdisonKaffee.json  PauliKaffee.json
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
runtime/src/weights/: mod.rs  pallet_enclave_bridge.rs  pallet_encointer-offline-payment.rs  pallet_encointer_balances.rs  pallet_encointer_bazaar.rs  pallet_encointer_ceremonies.rs  pallet_encointer_communities.rs  pallet_encointer_democracy.rs  pallet_encointer_faucet.rs  pallet_encointer_offline_payment.rs  pallet_encointer_reputation_commitments.rs  pallet_encointer_reputation_rings.rs  pallet_encointer_scheduler.rs  pallet_encointer_treasuries.rs  pallet_sidechain.rs  pallet_teerex.rs
scripts/: benchmark_runtime.sh  frame-weight-template-full-info.hbs  init.sh  install_python_deps.sh
(+43 files in other folders)
