[workspace]
resolver = "2"
members = [
    'node',
    'runtime',
    'client',
    'client/encointer-api-client-extension',
]

[profile.release]
panic = 'unwind'

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[workspace.dependencies]
async-trait = "0.1.68"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.10.2"
futures = { version = "0.3.30", features = ["thread-pool"] }
geojson = "0.22.2"
hex = "0.4.3"
log = "0.4.20"
maybe-async = { version = "0.2.7" }
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.209", default-features = false, features = ["alloc", "derive"] }
serde_derive = { version = "1.0.117" }
serde_json = { version = "1.0.127", default-features = false, features = ["alloc"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }

# encointer deps
encointer-balances-tx-payment = { default-features = false, version = "~15.1.0" }
encointer-balances-tx-payment-rpc = { version = "~15.1.0" }
encointer-balances-tx-payment-rpc-runtime-api = { default-features = false, version = "~15.1.0" }
encointer-ceremonies-assignment = { version = "~15.1.0" }
encointer-primitives = { default-features = false, version = "~15.4.0" }
pallet-encointer-balances = { default-features = false, version = "~15.2.0" }
pallet-encointer-bazaar = { default-features = false, version = "~15.1.0" }
pallet-encointer-bazaar-rpc = { version = "~15.1.0" }
pallet-encointer-bazaar-rpc-runtime-api = { default-features = false, version = "~15.1.0" }
pallet-encointer-ceremonies = { default-features = false, version = "~15.1.0" }
pallet-encointer-ceremonies-rpc = { version = "~15.1.0" }
pallet-encointer-ceremonies-rpc-runtime-api = { default-features = false, version = "~15.1.0" }
pallet-encointer-communities = { default-features = false, version = "~15.1.0" }
pallet-encointer-communities-rpc = { version = "~15.1.0" }
pallet-encointer-communities-rpc-runtime-api = { default-features = false, version = "~15.1.0" }
pallet-encointer-democracy = { default-features = false, version = "~15.4.0" }
pallet-encointer-faucet = { default-features = false, version = "~15.2.0" }
pallet-encointer-reputation-commitments = { default-features = false, version = "~15.1.0" }
pallet-encointer-scheduler = { default-features = false, version = "~15.1.0" }
pallet-encointer-treasuries = { default-features = false, version = "~15.4.1" }
pallet-encointer-treasuries-rpc = { version = "~15.3.0" }
pallet-encointer-treasuries-rpc-runtime-api = { default-features = false, version = "~15.3.0" }


# substrate deps
frame-benchmarking = { version = "39.0.0", default-features = false }
frame-benchmarking-cli = { version = "46.0.0" }
frame-executive = { version = "39.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.7.0", default-features = false }
frame-support = { version = "39.0.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
frame-system-benchmarking = { version = "39.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "35.0.0", default-features = false }
frame-try-runtime = { version = "0.45.0", default-features = false }
hex-literal = { version = "0.4.1" }
jsonrpsee = { version = "0.24.7", features = ["server"] }
pallet-asset-tx-payment = { version = "39.0.0", default-features = false }
pallet-aura = { version = "38.0.0", default-features = false }
pallet-balances = { version = "40.0.1", default-features = false }
pallet-grandpa = { version = "39.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "27.0.0", default-features = false }
pallet-proxy = { version = "39.0.0", default-features = false }
pallet-scheduler = { version = "40.0.0", default-features = false }
pallet-sudo = { version = "39.0.0", default-features = false }
pallet-timestamp = { version = "38.0.0", default-features = false }
pallet-transaction-payment = { version = "39.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "42.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "39.0.0", default-features = false }
pallet-treasury = { version = "38.0.0", default-features = false }
pallet-utility = { version = "39.0.0", default-features = false }
sc-basic-authorship = { version = "0.48.0" }
sc-chain-spec = "41.0.0"
sc-cli = { version = "0.50.0" }
sc-client-api = { version = "38.0.0" }
sc-consensus = { version = "0.47.0" }
sc-consensus-aura = { version = "0.48.0" }
sc-consensus-grandpa = { version = "0.33.0" }
sc-executor = { version = "0.41.0" }
sc-keystore = { version = "34.0.0" }
sc-network = { version = "0.48.2" }
sc-offchain = { version = "43.0.0" }
sc-rpc = "43.0.0"
sc-rpc-api = "0.47.0"
sc-service = { version = "0.49.0" }
sc-telemetry = { version = "28.0.0" }
sc-transaction-pool = { version = "38.1.0" }
sc-transaction-pool-api = { version = "38.1.0" }
sp-api = { version = "35.0.0", default-features = false }
sp-application-crypto = { version = "39.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
sp-blockchain = { version = "38.0.0", default-features = false }
sp-consensus = { version = "0.41.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", default-features = false, features = ["serde"] }
sp-consensus-grandpa = { version = "22.0.0", default-features = false, features = ["serde"] }
sp-core = { version = "35.0.0", default-features = false, features = ["serde"] }
sp-genesis-builder = { version = "0.16.0", default-features = false }
sp-inherents = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-keyring = { version = "40.0.0", default-features = false }
sp-keystore = { version = "0.41.0", default-features = false }
sp-offchain = { version = "35.0.0", default-features = false }
sp-rpc = { version = "33.0.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false, features = ["serde"] }
sp-session = { version = "37.0.0", default-features = false }
sp-staking = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-timestamp = { version = "35.0.0", default-features = false }
sp-transaction-pool = { version = "35.0.0", default-features = false }
sp-version = { version = "38.0.0", default-features = false, features = ["serde"] }
substrate-frame-rpc-system = { version = "42.0.0", default-features = false }

substrate-wasm-builder = "25.0.0"
substrate-build-script-utils = "11.0.0"

substrate-api-client = { version = "1.17.0", features = ["jsonrpsee-client"] }
ac-keystore = { version = "1.17.0" }

[patch.crates-io]
## api client
# patch needed because release 0.18 isn't depending on sdk 1.14
#ac-compose-macros = { git = "https://github.com/encointer/substrate-api-client.git", branch = "crates-io-v0.18.0-sdk-v1.14" }
#ac-keystore = { git = "https://github.com/encointer/substrate-api-client.git", branch = "crates-io-v0.18.0-sdk-v1.14" }
#ac-node-api = { git = "https://github.com/encointer/substrate-api-client.git", branch = "crates-io-v0.18.0-sdk-v1.14" }
#ac-primitives = { git = "https://github.com/encointer/substrate-api-client.git", branch = "crates-io-v0.18.0-sdk-v1.14" }
#substrate-api-client = { git = "https://github.com/encointer/substrate-api-client.git", branch = "crates-io-v0.18.0-sdk-v1.14" }
## local patching
#ac-compose-macros = { path = "../../substrate-api-client/compose-macros" }
#ac-node-api = { path = "../../substrate-api-client/node-api" }
#ac-primitives = { path = "../../substrate-api-client/primitives" }
#substrate-api-client = { path = "../../substrate-api-client" }
#ac-keystore = { path = "../../substrate-api-client/keystore" }


## encointer
#encointer-balances-tx-payment = { path = "../pallets/balances-tx-payment" }
#encointer-balances-tx-payment-rpc = { path = "../pallets/balances-tx-payment/rpc" }
#encointer-balances-tx-payment-rpc-runtime-api = { path = "../pallets/balances-tx-payment/rpc/runtime-api" }
#encointer-ceremonies-assignment = { path = "../pallets/ceremonies/assignment" }
#encointer-primitives = { path = "../pallets/primitives" }
#pallet-encointer-balances = { path = "../pallets/balances" }
#pallet-encointer-bazaar = { path = "../pallets/bazaar" }
#pallet-encointer-bazaar-rpc = { path = "../pallets/bazaar/rpc" }
#pallet-encointer-bazaar-rpc-runtime-api = { path = "../pallets/bazaar/rpc/runtime-api" }
#pallet-encointer-ceremonies = { path = "../pallets/ceremonies" }
#pallet-encointer-ceremonies-rpc = { path = "../pallets/ceremonies/rpc" }
#pallet-encointer-ceremonies-rpc-runtime-api = { path = "../pallets/ceremonies/rpc/runtime-api" }
#pallet-encointer-communities = { path = "../pallets/communities" }
#pallet-encointer-communities-rpc = { path = "../pallets/communities/rpc" }
#pallet-encointer-communities-rpc-runtime-api = { path = "../pallets/communities/rpc/runtime-api" }
#pallet-encointer-democracy = { path = "../pallets/democracy" }
#pallet-encointer-faucet = { path = "../pallets/faucet" }
#pallet-encointer-reputation-commitments = { path = "../pallets/reputation-commitments" }
#pallet-encointer-scheduler = { path = "../pallets/scheduler" }
#pallet-encointer-treasuries = { path = "../pallets/treasuries" }
#pallet-encointer-treasuries-rpc = { path = "../pallets/treasuries/rpc" }
#pallet-encointer-treasuries-rpc-runtime-api = { path = "../pallets/treasuries/rpc/runtime-api" }

# [patch."https://github.com/encointer/substrate-fixed"]
# substrate-fixed = { path = "../substrate-fixed" }
