[package]
name = "encointer-client-notee"
authors = ["encointer.org <alain@encointer.org>"]
edition = "2021"
#keep with node version. major, minor and patch
version = "1.3.3"

[dependencies]
clap = "2.33"
clap-nested = "0.4.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
env_logger = "0.9.0"
geojson = "0.22.2"
hex = "0.4.3"
log = "0.4.14"
serde_json = "1.0.79"

# local deps
encointer-api-client-extension = { path = "./encointer-api-client-extension" }
encointer-node-notee-runtime = { path = "../runtime" }

# encointer deps
encointer-ceremonies-assignment = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }
encointer-primitives = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }
pallet-encointer-balances = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }
pallet-encointer-ceremonies = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }
pallet-encointer-communities = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }
pallet-encointer-scheduler = { git = "https://github.com/encointer/pallets", branch = "szp/polkadot-v0.9.42" }

# scs deps
substrate-api-client = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.10.0" }
substrate-client-keystore = { git = "https://github.com/scs/substrate-api-client.git", branch = "polkadot-v0.9.42-tag-v0.10.0" }

# substrate deps
frame-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-application-crypto = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keyring = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-keystore = { version = "0.13.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-rpc = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
